@@ -1,4 +1,8 @@
 
+2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (cob_screen_init): escape backslash in key definitions
+
 2018-03-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c (set_cob_time_from_local_time): new function called on
